updated preview.py and fix: exp -> log

--- a/colab.ipynb
+++ b/colab.ipynb
@@ -37,6 +37,58 @@
    "source": [
     "# delete unrelated material and load remote repository"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -r sample_data\n",
+    "!git clone https://github.com/rodroadl/CCCNN-pytorch.git ./repo/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To reload modules before executing user code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train the network\n",
+    "change arguments according to your need"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ./repo/train.py --log-space False --train-file /content/drive/MyDrive/SimpleCube++/train/PNG --eval-file /content/drive/MyDrive/SimpleCube++/test/PNG --outputs-dir ./repo/pth --batch-size 32 --num-epochs 20 --lr 1e-3\n",
+    "%run ./repo/train.py --log-space False --train-file /content/drive/MyDrive/SimpleCube++/train/PNG --eval-file /content/drive/MyDrive/SimpleCube++/test/PNG --outputs-dir ./repo/pth --batch-size 32 --num-epochs 20 --lr 1e-4\n",
+    "%run ./repo/train.py --log-space False --train-file /content/drive/MyDrive/SimpleCube++/train/PNG --eval-file /content/drive/MyDrive/SimpleCube++/test/PNG --outputs-dir ./repo/pth --batch-size 32 --num-epochs 20 --lr 1e-5\n",
+    "%run ./repo/train.py --log-space False --train-file /content/drive/MyDrive/SimpleCube++/train/PNG --eval-file /content/drive/MyDrive/SimpleCube++/test/PNG --outputs-dir ./repo/pth --batch-size 32 --num-epochs 20 --lr 1e-6\n",
+    "\n",
+    "%run ./repo/train.py --log-space True --train-file /content/drive/MyDrive/SimpleCube++/train/PNG --eval-file /content/drive/MyDrive/SimpleCube++/test/PNG --outputs-dir ./repo/pth --batch-size 32 --num-epochs 20 --lr 1e-3\n",
+    "%run ./repo/train.py --log-space True --train-file /content/drive/MyDrive/SimpleCube++/train/PNG --eval-file /content/drive/MyDrive/SimpleCube++/test/PNG --outputs-dir ./repo/pth --batch-size 32 --num-epochs 20 --lr 1e-4\n",
+    "%run ./repo/train.py --log-space True --train-file /content/drive/MyDrive/SimpleCube++/train/PNG --eval-file /content/drive/MyDrive/SimpleCube++/test/PNG --outputs-dir ./repo/pth --batch-size 32 --num-epochs 20 --lr 1e-5\n",
+    "%run ./repo/train.py --log-space True --train-file /content/drive/MyDrive/SimpleCube++/train/PNG --eval-file /content/drive/MyDrive/SimpleCube++/test/PNG --outputs-dir ./repo/pth --batch-size 32 --num-epochs 20 --lr 1e-6"
+   ]
   }
  ],
  "metadata": {
